-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0
-
-
c07c261eb (dev), 312c718a8 (6.7), 827487d05 (6.6), 4550fc5e0 (tqtc/lts-6.5)
-
2023wk48FOQtforAndroid, 2023wk50FOQtforAndroid
MacOS 14.1
Qt Creator 12.0.0-rc1 (11.0.84)
Device: Samsung Galaxy S22 13.0, Samsung Galaxy S9 9.0
Steps to reproduce:
- Open a declarative camera example
- Run it on an Android device.
- Lock the screen.
- Unlock.
- Repeat steps 3-4 several times (5-10).
Expected: The app should not crash.
Actual: Sometimes it crashes several times in a row. Sometimes it needs a few repetitions to crash, but always crashes eventually.
Reproducibility: 100%
- relates to
-
QTQAINFRA-5914
Qt Test Attack - Q4, 2023
-
- Open
-